OpenVi 7.2.20 -> OpenVi 7.2.21-dev: Sun Jan 1 05:52:47 2023
        + Fix typo in `.gitattributes`; no code changes

OpenVi 7.2.19 -> OpenVi 7.2.20: Sun Jan 1 05:36:31 2023
        + Correctly increment version identifier to match release
        + Normalize comment blocks; no functional changes

OpenVi 7.1.18 -> OpenVi 7.2.19: Tue Nov 29 22:04:43 2022
        + Add translation of README.md into Brazilian Portuguese
        + Suppress the "UNLOCKED" message on AIX
        + Set OBJECT_MODE when stripping compiled binaries
        + Add DEP5 metadata file to the source tree
        + Add SPDX license identifiers for REUSE compliance
        + OpenBSD 7.2 enters beta; bumping OpenBSD version to 7.2

OpenVi 7.1.17 -> OpenVi 7.1.18: Sat Jul 23 19:40:59 2022
        + Quiet complaints when recovery directory is non-existent
        + Improve various status messages
        + Add permission statements to `GNUmakefile`, `BSDmakefile`
        + Update documentation

OpenVi 7.0.16 -> OpenVi 7.1.17: Sun Apr 24 07:57:29 2022
        + In v_event_get check qp->output for NULL before passing to
          e_memcmp(); other users of qp->output already include a NULL check;
          avoids a crash when cursor key support is disabled in cl/cl_term.c;
          from Jeremy Mates; ok tb@
        + Check tkp->output != NULL before taking strlen for both command
          mappings and input mappings; this adds a missing check for command
          mappings and simplifies the input mappings; ok millert@
        + From upstream man page, add missing comma; ok jmc@
        + Update documentation

OpenVi 7.0.15 -> OpenVi 7.1.16: Sun Mar 13 22:10:37 2022
        + Document that PCC (Portable C Compiler) is working
        + Add a BSD make wrapper that calls gmake if available
        + Add OpenBSD basename functionality for use with xinstall
        + Simplify compatibility headers
        + Make `sstrip` target depend on the `strip` target, since many