@@ -1,4 +1,4 @@
-.\"        $OpenBSD: vi.in,v 1.8 2004/02/20 20:05:05 jmc Exp $
+.\"        $OpenBSD: vi.in,v 1.9 2022/12/26 19:16:03 jmc Exp $
 .\"
 .\" SPDX-License-Identifier: BSD-3-Clause
 .\"
@@ -590,7 +590,7 @@ instead of
 This will set the
 .I readonly
 option which will prevent you from
-accidently overwriting the file.
+accidentally overwriting the file.
 .sp
 .NH 1
 Making simple changes
