@@ -1,4 +1,4 @@
-/*      $OpenBSD: vi.h,v 1.11 2016/05/27 09:18:12 martijn Exp $ */
+/*      $OpenBSD: vi.h,v 1.12 2022/12/26 19:16:04 jmc Exp $ */
 
 /* SPDX-License-Identifier: BSD-3-Clause */
 
@@ -69,7 +69,7 @@ typedef struct _vicmd {
          * to clear the others.
          */
 
-#define VM_RCM          0x00000010      /* Use relative cursor movment (RCM). */
+#define VM_RCM          0x00000010      /* Use relative cursor movement (RCM). */
 #define VM_RCM_SET      0x00000020      /* RCM: set to current position. */
 #define VM_RCM_SETFNB   0x00000040      /* RCM: set to first non-blank (FNB). */
 #define VM_RCM_SETLAST  0x00000080      /* RCM: set to last character. */
