@@ -1,4 +1,12 @@
-OpenVi 7.2.20 -> OpenVi 7.2.21-dev: Sun Jan 1 05:52:47 2023
+OpenVi 7.2.20 -> OpenVi 7.2.21-dev: Tue Jan 31 02:42:27 2023
+        + Fix handling of ex_range escaped backslashes; If there are two
+          consecutive backslashes, skip past both so the second is not
+          mistakenly treated as an escape character. This is consistent
+          with how escaped backslashes are treated in ex_substitute()
+          and global(); from Bosco G. G.
+        + Spelling fixes from Paul Tagliamonte
+        + Fix ^^D and 0^D description in man page; pointed out by
+          Tomas Rippl; ok jmc@
         + Fix typo in `.gitattributes`; no code changes
 
 OpenVi 7.2.19 -> OpenVi 7.2.20: Sun Jan 1 05:36:31 2023
